/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    `java-library`
    id("io.papermc.paperweight.userdev") version "1.7.7"
}

group = "com.github.Greenfoot5"
version = "1.1"
description = "CastleSiege plugin for ConwyMC"
java.sourceCompatibility = JavaVersion.VERSION_21

repositories {
    mavenLocal()
    mavenCentral()
//    maven {
//        url = uri("https://repo.maven.apache.org/maven2/")
//    }

    maven {
        credentials {
            username = project.property("globalUser").toString()
            password = project.property("globalPassword").toString()
        }
        name = "ConwyMC Global"
        url = uri("https://maven.pkg.github.com/Greenfoot5/ConwyMC-global")
    }

    maven {
        name = "Citizens"
        url = uri("https://repo.citizensnpcs.co/")
    }

//    maven {
//        url = uri("https://repo.dmulloy2.net/repository/public/")
//    }

    maven {
        name = "EngineHub"
        url = uri("https://maven.enginehub.org/repo/")
    }

    maven {
        name = "papermc"
        url = uri("https://repo.papermc.io/repository/maven-public/")
    }

    maven {
        name = "MythicCraft"
        url = uri("https://mvn.lumine.io/repository/maven-public/")
    }

    // Disabled until nametagedit is updated
//    maven {
//        name = "NameTagEdit"
//        url = uri("https://ci.nametagedit.com/plugin/repository/everything/")
//    }

    maven {
        url = uri("https://repo.codemc.io/repository/maven-releases/")
    }

    maven {
        name = "UltimateAdvancementAPI"
        url = uri("https://nexus.frengor.com/repository/public/")
    }

    maven {
        name = "Jitpack"
        url = uri("https://jitpack.io")
    }

    maven {
//        name = "Voting"
        url = uri("https://nexus.bencodez.com/repository/maven-public/")
    }

    // Backup in case a plugin's update isn't in a repo for some reason
    flatDir {
        dir("lib")
    }

    maven {
        name = "Aikar" // For NTE
        url = uri("https://repo.aikar.co/content/groups/aikar/")
    }
}

dependencies {
    paperweight.paperDevBundle("1.21.3-R0.1-SNAPSHOT")
    api(libs.com.github.greenfoot5.conwymc.global)
    api(libs.net.citizensnpcs.citizensapi)
    api(libs.com.github.sainttx.holograms.holograms.api)
    api(libs.com.comphenix.protocol.protocollib)
    api(libs.com.sk89q.worldedit.worldedit.core)
    api(libs.com.sk89q.worldedit.worldedit.bukkit)
    api(libs.dev.dejvokep.boosted.yaml.spigot)
    api(libs.commons.io.commons.io)
    api(libs.com.google.code.gson.gson)
    api(libs.net.megavex.scoreboard.library.api)
    api(libs.com.nametagedit.nametagedit)
    runtimeOnly(libs.net.megavex.scoreboard.library.implementation)
    runtimeOnly(libs.net.megavex.scoreboard.library.modern)
    runtimeOnly(libs.com.bencodez.votifierplus)
    compileOnly(libs.io.lumine.mythic.dist)
    compileOnly(libs.libsdisguises.libsdisguises)
    compileOnly(libs.com.sk89q.worldguard.worldguard.bukkit)
    compileOnly(libs.com.frengor.ultimateadvancementapi)
}

java {
    withJavadocJar()
    toolchain.languageVersion.set(JavaLanguageVersion.of(21))
}

tasks {
    compileJava {
        options.release = 21
    }

    javadoc {
        options.encoding = Charsets.UTF_8.name() // We want UTF-8 for everything
    }
}